# nezha-agent-cpp

./: .gitignore  CMakeLists.txt  README.md  nezha.js  windows.cmake
src/: IPManager.cpp  IPManager.h  common.h  main.cpp  nezha_util.cpp  nezha_util.h
src/include/spdlog/fmt/bundled/: format.h
src/machine_info/: MachineInfo.h  MachineInfo_win.cpp
src/proto/: nezha.proto
